...
//        let imageViewWidth = self.view.bounds.width - 40
        let imageViewHeight = (self.view.bounds.width - 40) / 2


        
        btnCommit.frame = CGRectMake(self.view.bounds.width - 99, imageViewHeight * 2 + tenthOfView + 20, 80, 30)
        btnCommit.setTitle("Commit!", forState: UIControlState.Normal)
        btnCommit.titleLabel?.font = UIFont(name: "Helvetica Neue", size: 16)
        btnCommit.setTitleColor(CustomColors.getPBarFillColor(), forState: UIControlState.Normal)
        btnCommit.backgroundColor = CustomColors.getViewBackgroundColor()
        btnCommit.layer.borderColor = CustomColors.getPBarFillColor().CGColor
        btnCommit.layer.borderWidth = 1.0
        btnCommit.layer.cornerRadius = 8.0
...
